[GTK] Opening a popup menu does not pre-select the active item https://bugs.webkit.org/show_bug.cgi?id=170680

Patch by Adrian Perez de Castro <aperez@igalia.com> on 2017-04-10
Reviewed by Michael Catanzaro.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::showPopupMenu): Use gtk_menu_shell_select_item() to
ensure that the active item appears selected right after popping up the menu.

Canonical link: https://commits.webkit.org/187614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215188 268f45cc-cd09-0410-ab3c-d52691b4dbfc